...
    <string name="number_hint">Enter card number.</string>
    <string name="value_hint">Enter card value.</string>
    <string name="count_hint">Enter card count.</string>
    <string name="player_name_hint">Enter player name.</string>
    <string name="player_position_hint">Enter player position.</string>
    
    <string name="year_radio_button">Year</string>
    <string name="number_radio_button">Number</string>
    <string name="year_and_number_radio_button">Year and Number</string>
    <string name="player_name_radio_button">Player Name</string>
    
    <string name="add_menu">Add Cards</string>
    <string name="filter_menu">Filter Cards</string>
    <string name="about_menu">About</string>
    
    <string name="version">Version 0.1 (alpha)</string>
    <string name="copyright">Copyright 2012 codeguru &lt;codeguru@users.sf.net&gt;</string>
    <string name="website">Website: http://sf.net/p/bbct</string>
    <string name="license">This software is licensed under the GPL. Visit http://www.gnu.org/licenses/ for a copy of the license.</string>
...
